manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starlight-save-file-component
  namespace: starlight-save-file-component
  labels:
    app: starlight-save-file-component
spec:
  replicas: 3
  selector:
    matchLabels:
      app: starlight-save-file-component
  template:
    metadata:
      labels:
        app: starlight-save-file-component
    spec:
      containers:
        - name: starlight-save-file-component
          image: "trueberryless/starlight-save-file-component:0.0.2"
          imagePullPolicy: Always
