manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starlight-save-file-component
  namespace: starlight-save-file-component
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: starlight-save-file-component
  ports:
    - name: http
      port: 80
