manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starlight-download-link
  namespace: starlight-download-link
spec:
  rules:
    - host: starlight-download-link.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: starlight-download-link
                port:
                  number: 80

  tls:
    - hosts:
        - starlight-download-link.trueberryless.org
      secretName: starlight-download-link
